--- a/cloudfront.yml
+++ b/cloudfront.yml
@@ -3,7 +3,7 @@ Parameters:
     Description: Unique identifier.
     Type: String
 
-Resources: #
+Resources: 
 
   CloudFrontOriginAccessIdentity:
     Type: "AWS::CloudFront::CloudFrontOriginAccessIdentity"
