fixed workflows order and removed quotes

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,19 +33,20 @@ jobs:
     steps:
       - checkout
       - run: |
-          aws s3 rm "s3://${OldPipelineID}" --recursive
-          aws cloudformation delete-stack --stack-name "${PreviousPipelineID}"
+          aws s3 rm s3://${OldPipelineID} --recursive
+          aws cloudformation delete-stack --stack-name ${PreviousPipelineID}
 
 workflows:
   default:
     jobs:
       - create_and_deploy_front_end
-      - promote_to_production:
-          requires:
-              - create_and_deploy_front_end
       - get_last_deployment_id:
           requires:
-              - promote_to_production        
+              - create_and_deploy_front_end
+      - promote_to_production:
+          requires:
+              - create_and_deploy_front_end     
       - clean_up_old_front_end:
           requires:
               - get_last_deployment_id
+              
