changed clean up stack name

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ jobs:
       - checkout
       - run: |
           aws s3 rm s3://${OldPipelineID} --recursive
-          aws cloudformation delete-stack --stack-name ${PreviousPipelineID}
+          aws cloudformation delete-stack --stack-name ${OldPipelineID}
 
 workflows:
   default:
