--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,9 @@ jobs:
     steps:
       - checkout
       - run: |
+          OldPipelineID=aws cloudformation \
+          list-exports --query "Exports[?Name==\`PipelineID\`].Value" \
+          --no-paginate --output text
           aws s3 rm s3://${OldPipelineID} --recursive
           aws cloudformation delete-stack --stack-name ${OldPipelineID}
 
