--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,8 +8,46 @@ jobs:
       - run: |
           aws cloudformation deploy --template-file bucket.yml --stack-name "${CIRCLE_WORKFLOW_ID:0:7}" --parameter-overrides NAME="${CIRCLE_WORKFLOW_ID:0:7}"
       - run: aws s3 sync . s3://"${CIRCLE_WORKFLOW_ID:0:7}" --delete
+  promote_to_production:
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      - checkout
+      - run: |
+          aws cloudformation deploy --template-file cloudfront.yml --stack-name production-distro --parameter-overrides PipelineID="${CIRCLE_WORKFLOW_ID}"
+  get_last_deployment_id:
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      - checkout
+      - run: |
+          aws cloudformation \
+          list-exports --query "Exports[?Name==\`PipelineID\`].Value" \
+          --no-paginate --output text
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - output.txt
+  clean_up_old_front_end:
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      - checkout
+      - run: |
+          aws s3 rm s3://${OldPipelineID} --recursive
+          aws cloudformation delete-stack --stack-name ${OldPipelineID}
+      - attach_workspace:
+          at: ~/
 workflows:
   default:
     jobs:
       - create_and_deploy_front_end
-      #
+      - promote_to_production:
+          requires:
+              - create_and_deploy_front_end
+      - get_last_deployment_id:
+          requires:
+              - create_and_deploy_front_end             
+      - clean_up_old_front_end:
+          requires:
+              - get_last_deployment_id
