added tar to get id job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,8 @@ jobs:
       - image: amazon/aws-cli
     steps:
       - checkout
+      - run: yum install -y tar
+      - run: yum install -y gzip
       - run: |
           aws cloudformation \
           list-exports --query "Exports[?Name==\`PipelineID\`].Value" \
