--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,6 +40,7 @@ jobs:
           aws cloudformation delete-stack --stack-name ${OldPipelineID}
       - attach_workspace:
           at: ~/
+      - run: cat ~/output.txt
 workflows:
   default:
     jobs:
